Added link to code

--- a/Index.html
+++ b/Index.html
@@ -96,6 +96,10 @@
           </div>
         </div>
       </div>
+      <span class="gitHubLink">
+      <a href="https://github.com/VividShinx/Code-Debug-Celebrate-Repeat" target="_blank">
+      Open-source code </a> by Siobhan Veal
+      </span>
     </div>
   </body>
 </html>
