--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,9 @@
     <div class="container">
       <span class= "spec">
         <div class="wapp">
+        <div id=icon>
+       <img src="" id="iconPic"/>
+        </div>
          <span class="temp">19°C </span>
         <h1 id= cityChange>
           Melbourne
