--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,8 @@
         <div id=icon>
        <img src="" id="iconPic"/>
         </div>
-         <span class="temp">19°C </span>
+         <span class="temp"><a class="celsius">°C</a></span>
+        
         <h1 id= cityChange>
           Melbourne
         </h1>
