--- a/Index.html
+++ b/Index.html
@@ -63,6 +63,15 @@
             </ul>
           </div>
         </div>
+        </div>
+        </div>
+        
+        <div class="row weather-forecast" id="forecast">
+  </div>
+</div>
+          </div>
+        </div>
+        </div>
       </div>
       <span id="gitHubLink">
       <a href="https://github.com/VividShinx/Code-Debug-Celebrate-Repeat" target="_blank">
